--- a/assets/styles/components/_nosso-espaco.scss
+++ b/assets/styles/components/_nosso-espaco.scss
@@ -1,5 +1,34 @@
+@use '../abstract/variaveis';
 @use '../abstract/mixins';
 
-#nosso-espaco {
+#nosso-espaco{
     @include mixins.margem-central(80%);
+    .detalhes {
+        width: 100%;
+        display: inline-flex;
+        align-items: center;
+        justify-content: space-around;
+        padding: 2rem 0;
+        gap: 2rem;
+        .imgs-espaco{
+            max-width: 500px;
+        }
+        .espaco-textos{
+            @extend .imgs-espaco;
+            .separador{
+                width: 100%;
+            }
+            .titulo{
+                @include mixins.ff-fs-color(variaveis.$ft-titulos, 1.8rem, variaveis.$cor-secundaria);
+                font-weight: 500;
+            }
+            .infos {
+                @include mixins.ff-fs-color(variaveis.$ft-textos, 1.2rem, variaveis.$cor-primaria);
+            }
+        }
+        &:nth-child(2) {
+            flex-direction: row-reverse;
+        }
+    }
 }
+
