--- a/assets/styles/components/_contatos.scss
+++ b/assets/styles/components/_contatos.scss
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     gap: 2rem;
+    margin-bottom: 8rem;
     .contatos-imgs{
         max-width: 50%;
         display: flex;
