--- a/assets/styles/components/_footer.sass
+++ b/assets/styles/components/_footer.sass
@@ -6,6 +6,7 @@ footer
     padding: 2rem
     text-align: center
     margin-top: 5rem
+    font-weight: 600
     @include mixins.ff-fs-color(variaveis.$ft-textos, 1rem, variaveis.$cor-primaria)
 
 
