--- a/assets/styles/components/_nosso-espaco.scss
+++ b/assets/styles/components/_nosso-espaco.scss
@@ -8,8 +8,9 @@
         display: inline-flex;
         align-items: center;
         justify-content: space-around;
-        padding: 2rem 0;
+        padding: 0.8rem 0;
         gap: 2rem;
+        margin-bottom: 5rem;
         .imgs-espaco{
             max-width: 500px;
         }
