--- a/assets/styles/components/_servicos.scss
+++ b/assets/styles/components/_servicos.scss
@@ -4,6 +4,7 @@
 #servico {
     background: variaveis.$gradiente-primario;
     padding: 5rem 0;
+    margin-bottom: 5rem;
     .cards {
         @include mixins.margem-central(80%);
         display: flex;
