--- a/assets/styles/components/_desconto.scss
+++ b/assets/styles/components/_desconto.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: space-between;
     text-align: center;
+    margin-bottom: 10rem;
     h4 {
         @include mixins.ff-fs-color(variaveis.$ft-titulos, 1.6rem, variaveis.$cor-primaria);
     }
