--- a/assets/styles/components/_header.scss
+++ b/assets/styles/components/_header.scss
@@ -4,6 +4,7 @@
 header {
     background: variaveis.$gradiente-primario;
     padding: 2rem;
+    margin-bottom: 5rem;
     nav {
         display: flex;
         flex-direction: column;
@@ -16,6 +17,7 @@ header {
         ul {
             display: inline-flex;
             gap: 2rem;
+            margin-top: 0;
             li {
                 list-style-type: none;
             }
